<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.7">
  <DUT Name="ST_ControlComau" Id="{2640b3bf-bec6-4af5-a87c-ac0aa0ed2365}">
    <Declaration><![CDATA[TYPE ST_ControlComau :
STRUCT
	q : ARRAY [0..2] OF LREAL := [0.0, 0.0, -1.57];
	q_t : ARRAY [0..2] OF LREAL;
	q_tt : ARRAY [0..2] OF LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>